# metacognitive-behavioral-tuning

./: .gitignore  README.md  pyproject.toml
configs/: sft.yaml
configs/vllm/: defaults.yaml  gpt-oss.yaml  gpt-oss_blackwell.yaml  llama4.yaml  llama4_blackwell.yaml
scripts/: main.sh  sft.sh
scripts/slurm/: download.slurm  main.sh  main.slurm  sft.sh  sft.slurm
src/mbt/: download.py
src/mbt/apis/huggingface/: chat.py
src/mbt/apis/openai/: chat.py  responses.py
src/mbt/apis/vllm/: chat.py  responses.py
src/mbt/tasks/: 2wikimultihopqa.py  hotpotqa.py  musique.py
src/mbt/tasks/qa/: answer_hit.py  evaluation.py  mbt_r.py  metacognition_score.py  overthinking_score.py  prompt_templates.py  underthinking_score.py
